--- a/styles/partials/_setup.scss
+++ b/styles/partials/_setup.scss
@@ -1,5 +1,69 @@
-article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:700;}dfn{font-style:italic;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em;}pre{white-space:pre-wrap;word-wrap:break-word;}q{quotes:\201C \201D \2018 \2019;}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-.5em;}sub{bottom:-.25em;}img{border:0;}svg:not(:root){overflow:hidden;}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,html input[type=button],/* 1 */input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0;}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}legend,button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
+//Our Thanks to
+//Photo by Zhen Hu on Unsplash for Header Background in search Page
 
-* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+$white: #efebe5;
+// $primaryColor: #416bff;
+$secondaryColor:#454d60;
+// $activeColor: #7c9da5;
+$activeColor: #cdcdcd;
+$black: #0f0a05;
 
+$headerFont: 'Bree Serif', serif;
+$bodyFont: 'Open Sans', sans-serif;
+
+// @mixin flex($flex-direction, $justify-content, $align-items, $text-align) {
+//     display: flex;
+//     flex-direction: $flex-direction;
+//     justify-content: $justify-content;
+//     align-items: $align-items;
+//     text-align: $text-align;
+// }
+@mixin color($backgroundColor, $fontColor) {
+    background-color: $backgroundColor;
+    color: $fontColor;
+}
+html {
+    font-size: 125%;
+}
+
+body {
+    @include color($white, $black);
+    font-family: $bodyFont;
+}
+
+// ul {
+//   margin: 0;
+//   padding: 0;
+// }
+// li {
+//   list-style: none;
+// }
+
+h1,
+h2 {
+    font-family: $headerFont;
+}
+p {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+a:hover {
+    color:$activeColor;
+}
+img {
+    width: 30%;
+    max-width: 30%;
+    border-radius: 10px;
+    display: block;
+}
 .visuallyHidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
+
+.wrapper {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 5%;
+}
