--- a/styles/style.css
+++ b/styles/style.css
@@ -1,128 +1,30 @@
-article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
-  display: block; }
-
-audio, canvas, video {
-  display: inline-block; }
-
-audio:not([controls]) {
-  display: none;
-  height: 0; }
-
-[hidden] {
-  display: none; }
-
 html {
-  font-family: sans-serif;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%; }
+  font-size: 125%; }
 
-a:focus {
-  outline: thin dotted; }
+body {
+  background-color: #efebe5;
+  color: #0f0a05;
+  font-family: "Open Sans", sans-serif; }
 
-a:active, a:hover {
-  outline: 0; }
+h1,
+h2 {
+  font-family: "Bree Serif", serif; }
 
-h1 {
-  font-size: 2em; }
+p {
+  margin: 0; }
 
-abbr[title] {
-  border-bottom: 1px dotted; }
+a {
+  text-decoration: none;
+  color: inherit; }
 
-b, strong {
-  font-weight: 700; }
-
-dfn {
-  font-style: italic; }
-
-mark {
-  background: #ff0;
-  color: #000; }
-
-code, kbd, pre, samp {
-  font-family: monospace, serif;
-  font-size: 1em; }
-
-pre {
-  white-space: pre-wrap;
-  word-wrap: break-word; }
-
-q {
-  quotes: \201C \201D \2018 \2019; }
-
-small {
-  font-size: 80%; }
-
-sub, sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline; }
-
-sup {
-  top: -.5em; }
-
-sub {
-  bottom: -.25em; }
+a:hover {
+  color: #cdcdcd; }
 
 img {
-  border: 0; }
-
-svg:not(:root) {
-  overflow: hidden; }
-
-fieldset {
-  border: 1px solid silver;
-  margin: 0 2px;
-  padding: .35em .625em .75em; }
-
-button, input, select, textarea {
-  font-family: inherit;
-  font-size: 100%;
-  margin: 0; }
-
-button, input {
-  line-height: normal; }
-
-button, html input[type=button], input[type=reset], input[type=submit] {
-  -webkit-appearance: button;
-  cursor: pointer; }
-
-button[disabled], input[disabled] {
-  cursor: default; }
-
-input[type=checkbox], input[type=radio] {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 0; }
-
-input[type=search] {
-  -webkit-appearance: textfield;
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  box-sizing: content-box; }
-
-input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none; }
-
-textarea {
-  overflow: auto;
-  vertical-align: top; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-body, figure {
-  margin: 0; }
-
-legend, button::-moz-focus-inner, input::-moz-focus-inner {
-  border: 0;
-  padding: 0; }
-
-* {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+  width: 30%;
+  max-width: 30%;
+  border-radius: 10px;
+  display: block; }
 
 .visuallyHidden:not(:focus):not(:active) {
   position: absolute;
@@ -136,3 +38,67 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   clip-path: inset(100%);
   clip: rect(0 0 0);
   overflow: hidden; }
+
+.wrapper {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 5%; }
+
+header {
+  background-image: url("../../assets/headerBackground.jpg");
+  background-position: center center;
+  background-size: cover;
+  height: calc(100vh - 50px); }
+
+.headerContent {
+  width: 80%;
+  padding: 25px;
+  background: rgba(255, 255, 255, 0.7); }
+
+h1 {
+  font-size: 70px; }
+
+a.connect {
+  font-size: 30px; }
+  a.connect:hover {
+    color: #454d60; }
+
+.textInput input {
+  border: none;
+  border-bottom: 1px solid #454d60;
+  padding: 5px 3px;
+  background-color: inherit; }
+  .textInput input:first-of-type {
+    margin-bottom: 15px; }
+  .textInput input:focus {
+    background-color: #cdcdcd; }
+
+[type="submit"] {
+  margin-bottom: 10px;
+  padding: 7px 12px; }
+
+@media (max-width: 620px) {
+  h1 {
+    line-height: 1;
+    font-size: 50px; } }
+
+@media (max-width: 500px) {
+  .headerContent {
+    width: 90%;
+    padding: 15px; }
+    .headerContent p,
+    .headerContent [type="text"] {
+      font-size: 18px; } }
+
+@media (max-width: 400px) {
+  .textInput input {
+    width: 85%; } }
+
+footer {
+  background-color: #0f0a05;
+  color: #efebe5;
+  text-align: center;
+  height: 50px;
+  padding: 5px 0; }
+  footer p {
+    line-height: 1; }
