--- a/styles/partials/_results.scss
+++ b/styles/partials/_results.scss
@@ -1,6 +1,7 @@
 .resultWrapper {
     max-width: 1600px;
-    padding:30px 3%;
+    margin: 0 auto;
+    padding:40px 3%;
 }
 .card {
     width:31%;
@@ -57,6 +58,19 @@
 .findMore a {
     color:$accentColor;
 }
+.arrowUp {
+    @include color(inherit,$secondaryColor);
+    position: fixed;
+    display: none;
+    right: 20px;
+    bottom: 30px;
+    font-size: 40px;
+    opacity: 1;
+    transition: all 0.5s;
+    &:hover {
+        transform: scale(1.25);
+    }
+}
 @media (max-width:1100px) {
     .card {
         width: 49%;
@@ -94,11 +108,15 @@
     }
     .readMoreBtn {
     margin-top: 8px;
-
     }
 }
 @media (max-width:700px) {
     .card h4 {
         font-size: 18px;
+    }
+    .arrowUp  {
+        right: 5px;
+        bottom: 15px;
+        font-size: 30px;
     }
 }
