--- a/styles/style.css
+++ b/styles/style.css
@@ -36,11 +36,6 @@ img {
   clip: rect(0 0 0);
   overflow: hidden; }
 
-.wrapper {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 5%; }
-
 header {
   background-image: url("../../assets/headerBackground.jpg");
   background-position: center center;
@@ -97,7 +92,8 @@ a.connect {
 
 .resultWrapper {
   max-width: 1600px;
-  padding: 30px 3%; }
+  margin: 0 auto;
+  padding: 40px 3%; }
 
 .card {
   width: 31%;
@@ -147,6 +143,23 @@ a.connect {
 .findMore a {
   color: #681310; }
 
+.arrowUp {
+  background-color: inherit;
+  color: #454d60;
+  position: fixed;
+  display: none;
+  right: 20px;
+  bottom: 30px;
+  font-size: 40px;
+  opacity: 1;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s; }
+  .arrowUp:hover {
+    -webkit-transform: scale(1.25);
+    -ms-transform: scale(1.25);
+    transform: scale(1.25); }
+
 @media (max-width: 1100px) {
   .card {
     width: 49%;
@@ -178,7 +191,11 @@ a.connect {
 
 @media (max-width: 700px) {
   .card h4 {
-    font-size: 18px; } }
+    font-size: 18px; }
+  .arrowUp {
+    right: 5px;
+    bottom: 15px;
+    font-size: 30px; } }
 
 footer {
   background-color: #0f0a05;
