--- a/styles/partials/_setup.scss
+++ b/styles/partials/_setup.scss
@@ -57,6 +57,8 @@ a {
 img {
     width: 50%;
     max-width: 50%;
+    margin-top: 10px;
+    margin-bottom: 10px;
     border-radius: 10px;
     display: block;
 }
