--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,8 @@ a {
 img {
   width: 50%;
   max-width: 50%;
+  margin-top: 10px;
+  margin-bottom: 10px;
   border-radius: 10px;
   display: block; }
 
@@ -114,9 +116,6 @@ a.connect {
 
 .description {
   line-height: 1.28; }
-  .description img {
-    margin-top: 10px;
-    margin-bottom: 10px; }
 
 .truncated {
   overflow: hidden;
@@ -151,6 +150,12 @@ a.connect {
 
 .modal p {
   word-wrap: break-word; }
+
+.modal img {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  max-width: 80%; }
 
 .arrowUp {
   background-color: inherit;
