--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -7,12 +7,6 @@ footer {
         line-height: 1;
     }
     a:hover {
-    color:$activeColor;
+    color:$accentColorTwo;
   }
 }
-
-  // @media (max-width: 400px) {
-    // footer {
-    //     height: auto;
-    //     font-size: 1rem;
-    // }
