--- a/styles/style.css
+++ b/styles/style.css
@@ -114,8 +114,7 @@ a.connect {
 .basicInfo,
 .eventTime,
 .eventVenue,
-.description,
-.eventDetails {
+.description {
   margin-bottom: 15px; }
 
 .description {
