--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,5 +1,5 @@
 header {
-	background-image: url("../assets/headerBackground.jpg");
+	background-image: url("./assets/headerBackground.jpg");
 	background-position: center center;
 	background-size: cover;
 	height: calc(100vh - 50px);
