--- a/styles/style.css
+++ b/styles/style.css
@@ -42,7 +42,7 @@ img {
   overflow: hidden; }
 
 header {
-  background-image: url("../../assets/headerBackground.jpg");
+  background-image: url("../assets/headerBackground.jpg");
   background-position: center center;
   background-size: cover;
   height: calc(100vh - 50px); }
